--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,20 @@
+# Параметр задержки между действиями в миллисекундах (по моим тестам оптимально 400, можно ставить больше если что то не прокликивается)
 SLOW_MODE_VALUE=400
+# Адрес локального апи AdsPower
 ADS_API_URL="http://local.adspower.net:50325"
-TX_COUNT_MIN=15
-TX_COUNT_MAX=25
-ACCOUNT_LATENCY_MIN=10
-ACCOUNT_LATENCY_MAX=100
+# Диапазон по количеству транзакций на каждый аккаунт
+TX_COUNT_MIN=2
+TX_COUNT_MAX=6
+
+# Задержка между запуском аккаунтов
+ACCOUNT_LATENCY_MIN=30
+ACCOUNT_LATENCY_MAX=60
+
+# Количество потоков(нужен только для работы чекера в конце)
 QUANTITY_THREADS=5
-MAX_GWEI=1.2
+
+# Максимальная комиссия сети (проверка идет по средней)
+MAX_GWEI=4.2
+
+# Если true то скрипт НЕ будет подписывать транзакцию в самом конце. Нужно для тестовых запусков.
 TEST_RUN=true
