--- a/.env.example
+++ b/.env.example
@@ -7,14 +7,17 @@ TX_COUNT_MIN=2
 TX_COUNT_MAX=6
 
 # Задержка между запуском аккаунтов
-ACCOUNT_LATENCY_MIN=30
-ACCOUNT_LATENCY_MAX=60
+ACCOUNT_LATENCY_MIN=300
+ACCOUNT_LATENCY_MAX=600
+
+# Задержка между кругами
+ROUND_LATENCY=600
 
 # Количество потоков(нужен только для работы чекера в конце)
 QUANTITY_THREADS=5
 
 # Максимальная комиссия сети (проверка идет по средней)
-MAX_GWEI=4.2
+MAX_GWEI=9
 
 # Если true то скрипт НЕ будет подписывать транзакцию в самом конце. Нужно для тестовых запусков.
 TEST_RUN=true
