Add retry wrapper

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,9 @@ ROUND_LATENCY=600
 # Количество потоков(нужен только для работы чекера в конце)
 QUANTITY_THREADS=5
 
+# Количество попыток для запуска кликера
+RETRY_COUNT=3
+
 # Максимальная комиссия сети (проверка идет по средней)
 MAX_GWEI=9
 
