Add settings params for retry

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,10 @@ QUANTITY_THREADS=5
 # Количество попыток для запуска кликера
 RETRY_COUNT=3
 
+# Диапазон для таймаута ретрая
+RETRY_TIMEOUT_MIN = 60
+RETRY_TIMEOUT_MAX = 90
+
 # Максимальная комиссия сети (проверка идет по средней)
 MAX_GWEI=9
 
