--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ packaging==24.1
 parsimonious==0.10.0
 playwright==1.45.1
 pluggy==1.5.0
+prompt-toolkit==3.0.36
 protobuf==5.27.2
 pycryptodome==3.20.0
 pyee==11.1.0
@@ -40,6 +41,7 @@ pytest-playwright==0.5.1
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pyunormalize==15.1.0
+questionary==2.0.1
 referencing==0.35.1
 regex==2024.7.24
 requests==2.32.3
@@ -50,6 +52,7 @@ text-unidecode==1.3
 toolz==0.12.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+wcwidth==0.2.13
 web3==6.20.1
 websockets==12.0
 yarl==1.9.4
