--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ RETRY_COUNT=3
 RETRY_TIMEOUT_MIN = 60
 RETRY_TIMEOUT_MAX = 90
 
+# Диапазон длины для домена
+DOMAIN_LENGHT_FROM = 10
+DOMAIN_LENGHT_TO = 20
+
 # Максимальная комиссия сети (проверка идет по средней)
 MAX_GWEI=9
 
