--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,15 @@ aiosignal==1.3.1
 anyio==4.4.0
 asyncio==3.4.3
 attrs==23.2.0
+base58==2.1.1
+base58check==1.0.2
 bitarray==2.9.2
+bitcoin-utils==0.6.8
 certifi==2024.7.4
 charset-normalizer==3.3.2
 ckzg==1.0.2
 cytoolz==0.12.3
+ecdsa==0.18.0
 eth-account==0.11.2
 eth-hash==0.7.0
 eth-keyfile==0.8.1
@@ -16,8 +20,10 @@ eth-rlp==1.0.1
 eth-typing==4.4.0
 eth-utils==4.1.1
 eth_abi==5.1.0
+fastecdsa==2.3.2
 frozenlist==1.4.1
 greenlet==3.0.3
+hdwallet==2.2.1
 hexbytes==0.3.1
 idna==3.7
 iniconfig==2.0.0
@@ -25,7 +31,10 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 loguru==0.7.2
 lru-dict==1.2.0
+mnemonic==0.21
+mpmath==1.3.0
 multidict==6.0.5
+numpy==2.1.0
 packaging==24.1
 parsimonious==0.10.0
 playwright==1.45.1
@@ -38,6 +47,7 @@ pytest==8.3.2
 pytest-asyncio==0.23.8
 pytest-base-url==2.1.0
 pytest-playwright==0.5.1
+python-bitcoinrpc==1.0
 python-dotenv==1.0.1
 python-slugify==8.0.4
 pyunormalize==15.1.0
@@ -47,7 +57,10 @@ regex==2024.7.24
 requests==2.32.3
 rlp==4.0.1
 rpds-py==0.19.1
+six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.32
+sympy==1.13.2
 text-unidecode==1.3
 toolz==0.12.1
 typing_extensions==4.12.2
