Add fractal mint & coinex fb withdraw

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,9 @@ MAX_GWEI=9
 
 # Если true то скрипт НЕ будет подписывать транзакцию в самом конце. Нужно для тестовых запусков.
 TEST_RUN=true
+
+# Для доступа к Coinex
+COINEX_ACCESS_ID = ""
+COINEX_SECRET = ""
+
+MAX_FRACTAL_GAS=250
