--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiodns==3.2.0
 aiohttp==3.9.5
 aiosignal==1.3.1
 anyio==4.4.0
@@ -7,9 +8,12 @@ base58==2.1.1
 base58check==1.0.2
 bitarray==2.9.2
 bitcoin-utils==0.6.8
+ccxt==4.4.17
 certifi==2024.7.4
+cffi==1.17.1
 charset-normalizer==3.3.2
 ckzg==1.0.2
+cryptography==43.0.1
 cytoolz==0.12.3
 ecdsa==0.18.0
 eth-account==0.11.2
@@ -41,6 +45,8 @@ playwright==1.45.1
 pluggy==1.5.0
 prompt-toolkit==3.0.36
 protobuf==5.27.2
+pycares==4.4.0
+pycparser==2.22
 pycryptodome==3.20.0
 pyee==11.1.0
 pytest==8.3.2
@@ -57,6 +63,7 @@ regex==2024.7.24
 requests==2.32.3
 rlp==4.0.1
 rpds-py==0.19.1
+setuptools==75.1.0
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.32
