Fix ads api path

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 # Параметр задержки между действиями в миллисекундах (по моим тестам оптимально 400, можно ставить больше если что то не прокликивается)
 SLOW_MODE_VALUE=400
-# Адрес локального апи AdsPower
-ADS_API_URL="http://local.adspower.net:50325"
+# Адрес и порт локального апи AdsPower
+ADS_API_URL="local.adspower.net"
+ADS_API_PORT="50325"
 # Диапазон по количеству транзакций на каждый аккаунт
 TX_COUNT_MIN=2
 TX_COUNT_MAX=6
