--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiodns==3.2.0
 aiohttp==3.9.5
 aiosignal==1.3.1
+altgraph==0.17.4
 anyio==4.4.0
 asyncio==3.4.3
 attrs==23.2.0
@@ -49,6 +50,8 @@ pycares==4.4.0
 pycparser==2.22
 pycryptodome==3.20.0
 pyee==11.1.0
+pyinstaller==6.11.0
+pyinstaller-hooks-contrib==2024.9
 pytest==8.3.2
 pytest-asyncio==0.23.8
 pytest-base-url==2.1.0
